<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sec Mail</string>
    <string name="beta_app_name">Sec Mail BETA</string>
    <string name="shortcuts_title">Sec Accounts</string>
    <string name="unread_widget_label">Sec Unread</string>
    <string name="remote_control_label">Sec Mail remote control</string>
    <string name="remote_control_desc">Allows this application to control Sec Mail activities and settings.</string>
    <string name="app_authors">Google, The Sec Dog Walkers.</string>
    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The Sec Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to Sec Mail</string>
    <string name="accounts_welcome">Welcome to Sec Mail setup. Sec is an open source mail client for Android originally based on the
standard Android Mail client.
\n\n
\nSec\'s improved features include:
\n * Push mail using IMAP IDLE
\n * Better performance
\n * Message refiling
\n * Email signatures
\n * Bcc-to-self
\n * Folder subscriptions
\n * All folder synchronization
\n * Return-address configuration
\n * Keyboard shortcuts
\n * Better IMAP support
\n * Saving attachments to SD
\n * Empty Trash
\n * Message sorting
\n * …and more
\n
\nPlease note that Sec does not support most free Hotmail accounts and, like many mail clients, has
some quirks when talking to Microsoft Exchange.
\n
\nPlease submit bug reports, contribute new features and ask questions at
http://k9mail.googlecode.com/</string>
    <string name="default_signature">-- \nSent from my Android device with Sec Mail. Please excuse my brevity.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from Sec Mail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="insufficient_apg_permissions">Sec doesn\'t have permission to access APG fully, please reinstall Sec to fix that.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g></string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">Next poll <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="continue_action">Continue</string>
    <string name="back_action">Back</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="choose_message_item">Choose</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="add_attachment_action_image">Add attachment (Image)</string>
    <string name="add_attachment_action_video">Add attachment (Video)</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading">Polling</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="account_size_changed">    Account \"<xliff:g id="account">%s</xliff:g>\" shrunk from<xliff:g id="oldSize">%s</xliff:g>    to<xliff:g id="newSize">%s</xliff:g></string>
    <string name="compacting_account">Compacting account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="clearing_account">Clearing account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="recreating_account">Recreating account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="notification_new_title">New mail</string>
    <string name="notification_new_messages_title"><xliff:g id="new_message_count">%d</xliff:g> new messages</string>
    <string name="notification_new_one_account_fmt"><xliff:g id="unread_message_count">%d</xliff:g> Unread (<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_additional_messages">+ <xliff:g id="additional_messages">%d</xliff:g> more on <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_action_reply">Reply</string>
    <string name="message_from_label">From:</string>
    <string name="message_to_label">To:</string>
    <string name="message_view_cc_label">Cc:</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_show_message_action">Show message</string>
    <string name="message_view_show_attachments_action">Show attachments</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional):</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>
    <string name="protect_type_email">Email</string>
    <string name="protect_button_apply">Apply</string>
    <string name="protect_button_verify">Verify</string>
    <string name="protect_button_cancel">Cancel</string>
    <string name="protect_dialog_choose_type">Please select a secret way:</string>
    <string name="captcha_dialog_message">GeziMail server has sent a verification code to your security mailbox(phone), please fill the code you received in this input box.</string>
    <string name="captcha_dialog_edittext_hint">Please input captcha</string>
</resources>