<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:padding="6dip"
        android:scrollbarStyle="outsideInset" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_setup_basics_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_setup_basics_password_hint"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/next"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/account_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_setup_names_account_name_label"
                android:singleLine="true" />

            <EditText
                android:id="@+id/account_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_setup_names_user_name_label"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_setup" />

</LinearLayout>