<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/protect_dialog_choose_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_protect_type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:entries="@array/account_protect_types" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_protect_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_type_email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_protect"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/bt_protect_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/protect_button_apply" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#EEEEEE" />

        <Button
            android:id="@+id/bt_protect_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/protect_button_cancel" />
    </LinearLayout>

</LinearLayout>